fix z-index

--- a/src/app/components/history-loader/history-loader.component.scss
+++ b/src/app/components/history-loader/history-loader.component.scss
@@ -1,4 +1,5 @@
 #overlay-options {
+  z-index: 500;
   position: fixed;
   top: 0;
   left: 0;
